--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
         "illuminate/mail": "^7.22",
         "illuminate/notifications": "^7.22",
         "laravel/lumen-framework": "^7.0",
+        "maatwebsite/excel": "^3.1",
         "tymon/jwt-auth": "dev-develop"
     },
     "require-dev": {
